# eLibrary

./: .gitignore  docker-compose.yml
backend/: .env  .flake8  .pre-commit-config.yml  Dockerfile  Makefile  alembic.ini  config.cfg  pyproject.toml
backend/config/: urls.py  yasg.py
backend/config/settings/: __init__.py  base.py  database.py  drf.py  logging.py  security.py
backend/migrations/: env.py
backend/migrations/versions/: 2023-05-11_init.py  2023-05-12_book_and_extans.py  2023-05-12_update_name_of_password_fields.py  2023-05-12_update_user_by_fastapi_users.py  2023-05-12_user.py  2023-05-14_add_user_book_into_library_model.py  2023-05-14_fix_user_book_and_library_keys.py
backend/src/: main.py  routers.py
backend/src/auth/: config.py  manager.py  models.py  schemas.py  utils.py  views.py
backend/src/auth/models/: user.py
backend/src/authentication/: apps.py
backend/src/base/: choise.py  model_fields.py  paginators.py  viewsets.py
backend/src/config/: const.py  database.py
backend/src/core/: models.py
backend/src/core/migrations/: 0001_initial.py
backend/src/elibrary/: admin.py  apps.py  serializers.py  urls.py  views.py
backend/src/elibrary/migrations/: 0001_initial.py  0002_author_genre_language_booklanguages_bookgenre_and_more.py
backend/src/elibrary/models/: __init__.py  book.py  library.py  other.py
backend/src/user/: api.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  index.js
frontend/src/components/: LoginForm.jsx
frontend/src/http/: index.js
nginx/: nginx.conf
(+2 files in other folders)
