[tool.poetry]
name = "elib"
version = "0.1.0"
description = ""
authors = ["RasulMakhmudov <makhmudov_ra@vk.com>"]
readme = "README.md"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poetry.dependencies]
alembic = "^1.10.4"
fastapi = "^0.95.1"
pydantic = "^1.10.7"
python = "^3.9"
sqlalchemy = "^2.0.13"
uvicorn = "^0.22.0"
asyncpg = "^0.27.0"
python-decouple = "^3.8"

[tool.poetry.dev-dependencies]
black = "^23.3.0"
flake8-builtins = "^2.1.0"
flake8-bugbear = "^23.5.9"
flake8-class-attributes-order = "^0.1.3"
flake8-cognitive-complexity = "^0.1.0"
flake8-commas = "^2.1.0"
flake8-expression-complexity = "^0.0.11"
flake8-functions = "^0.0.8"
flake8-import-order = "^0.18.2"
flake8-quotes = "^3.3.2"
flake8-variables-names = "^0.0.5"
pep8-naming = "^0.13.3"
