[tool.poetry]
name = "elib"
version = "0.1.0"
description = ""
authors = ["nnnlik <makhmudov_ra@vk.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
django = "^4.2.1"
drf-yasg = "^1.21.5"
djangorestframework = "^3.14.0"
markdown = "^3.4.3"
django-filter = "^23.2"
pre-commit = "^3.3.1"
install = "^1.3.5"
python-decouple = "^3.8"
psycopg2-binary = "^2.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
